{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 60,
  "lineage": "188bd105-e93f-b7bd-4bc3-2d46dbb38c09",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 10,
                "min_capacity": 2
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/backendAddressPools/bug-report-vnet-beap",
                "ip_addresses": [],
                "name": "bug-report-vnet-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/backendHttpSettingsCollection/bug-report-vnet-be-htst",
                "name": "bug-report-vnet-be-htst",
                "path": "/path1/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/frontendIPConfigurations/bug-report-vnet-feip",
                "name": "bug-report-vnet-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/publicIPAddresses/bug-report-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/frontendPorts/bug-report-vnet-feport",
                "name": "bug-report-vnet-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/virtualNetworks/bug-report-vnet/subnets/ag"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/frontendIPConfigurations/bug-report-vnet-feip",
                "frontend_ip_configuration_name": "bug-report-vnet-feip",
                "frontend_port_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/frontendPorts/bug-report-vnet-feport",
                "frontend_port_name": "bug-report-vnet-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/httpListeners/bug-report-vnet-httplstn",
                "name": "bug-report-vnet-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway",
            "identity": [],
            "location": "westeurope",
            "name": "bug-report-appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/backendAddressPools/bug-report-vnet-beap",
                "backend_address_pool_name": "bug-report-vnet-beap",
                "backend_http_settings_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/backendHttpSettingsCollection/bug-report-vnet-be-htst",
                "backend_http_settings_name": "bug-report-vnet-be-htst",
                "http_listener_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/httpListeners/bug-report-vnet-httplstn",
                "http_listener_name": "bug-report-vnet-httplstn",
                "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/applicationGateways/bug-report-appgateway/requestRoutingRules/bug-report-vnet-rqrt",
                "name": "bug-report-vnet-rqrt",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "bug-report-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": false,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.2"
              }
            ],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.default",
            "azurerm_public_ip.default",
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/networkSecurityGroups/bug-report-ag-nsg",
            "location": "westeurope",
            "name": "bug-report-ag-nsg",
            "resource_group_name": "bug-report-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowApplicationGatewayInboundTrafficNecessaryPorts",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowApplicationGatewayInboundTrafficPort80",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/publicIPAddresses/bug-report-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.229.225.188",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "bug-report-pip",
            "resource_group_name": "bug-report-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "bug-report"
            }
          },
          "dependencies": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.240.0.0/12"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c77f0a1a-9494-4eaf-8d91-ec7517f904f5",
            "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/virtualNetworks/bug-report-vnet",
            "location": "westeurope",
            "name": "bug-report-vnet",
            "resource_group_name": "bug-report-rg",
            "subnet": [
              {
                "address_prefix": "10.240.0.0/16",
                "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/virtualNetworks/bug-report-vnet/subnets/ag",
                "name": "ag",
                "security_group": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/networkSecurityGroups/bug-report-ag-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_network_security_group.default",
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "default-AKS",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "197fd8a1-8633-4ace-a130-a5494207b91d",
            "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg-AKS/providers/Microsoft.Network/virtualNetworks/bug-report-vnet",
            "location": "westeurope",
            "name": "bug-report-vnet",
            "resource_group_name": "bug-report-rg-AKS"
          },
          "dependencies": [
            "azurerm_resource_group.default-AKS"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "ag2aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/virtualNetworks/bug-report-vnet/virtualNetworkPeerings/ag2aks",
            "name": "ag2aks",
            "remote_virtual_network_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg-AKS/providers/Microsoft.Network/virtualNetworks/bug-report-vnet",
            "resource_group_name": "bug-report-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "bug-report-vnet"
          },
          "dependencies": [
            "azurerm_network_security_group.default",
            "azurerm_resource_group.default",
            "azurerm_resource_group.default-AKS",
            "azurerm_virtual_network.default",
            "azurerm_virtual_network.default-AKS"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "aks2ag",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg-AKS/providers/Microsoft.Network/virtualNetworks/bug-report-vnet/virtualNetworkPeerings/aks2ag",
            "name": "aks2ag",
            "remote_virtual_network_id": "/subscriptions/dc6bcfa4-7db8-4f95-afaa-49236377382c/resourceGroups/bug-report-rg/providers/Microsoft.Network/virtualNetworks/bug-report-vnet",
            "resource_group_name": "bug-report-rg-AKS",
            "use_remote_gateways": false,
            "virtual_network_name": "bug-report-vnet"
          },
          "dependencies": [
            "azurerm_network_security_group.default",
            "azurerm_resource_group.default",
            "azurerm_resource_group.default-AKS",
            "azurerm_virtual_network.default",
            "azurerm_virtual_network.default-AKS"
          ]
        }
      ]
    }
  ]
}